tests/ui/parser/issues/issue-87812.stderr
error: this labeled break expression is easy to confuse with an unlabeled break with a labeled value expression
  --> $DIR/issue-87812.rs:6:13
   |
LL | / macro_rules! foo {
LL | |     ( $f:block ) => {
LL | |         '_l: loop {
LL | |             break '_l $f;
   | |             ^^^^^^^^^^^^
LL | |         }
LL | |     };
LL | | }
   | |_- in this expansion of `foo!`
...
LL |       let x = foo!({ 3 });
   |               ----------- in this macro invocation
   |
note: the lint level is defined here
  --> $DIR/issue-87812.rs:1:9
   |
LL | #![deny(break_with_label_and_loop)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
help: wrap this expression in parentheses
   |
LL |             break '_l ($f);
   |                       +  +

error: aborting due to previous error

